RESOLVED FIXED129854
[iOS] Crash on launch with website restrictions enabled
https://bugs.webkit.org/show_bug.cgi?id=129854
Summary [iOS] Crash on launch with website restrictions enabled
Pratik Solanki
Reported 2014-03-06 17:45:03 PST
Sfaari crashes when website restrictions are enabled.
Attachments
Patch (1.51 KB, patch)
2014-03-06 17:47 PST, Pratik Solanki
no flags
Pratik Solanki
Comment 1 2014-03-06 17:45:22 PST
Pratik Solanki
Comment 2 2014-03-06 17:47:41 PST
WebKit Commit Bot
Comment 3 2014-03-06 18:15:47 PST
Comment on attachment 226071 [details] Patch Clearing flags on attachment: 226071 Committed r165240: <http://trac.webkit.org/changeset/165240>
WebKit Commit Bot
Comment 4 2014-03-06 18:15:50 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.