[iOS] Crash on launch with website restrictions enabled https://bugs.webkit.org/show_bug.cgi?id=129854 <rdar://problem/16207016>

Reviewed by Simon Fraser.

* platform/mac/ContentFilterMac.mm:
(WebCore::ContentFilter::ContentFilter): Initialize m_neFilterSourceQueue so that we don't
crash in the dtor due to garbage value in the field.


Canonical link: https://commits.webkit.org/147876@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@165240 268f45cc-cd09-0410-ab3c-d52691b4dbfc